fix: increase width of move-col-tmNumber for improved alignment in MoveTable. Literally this change is just for TM100 which would wrap around.

--- a/src/App.css
+++ b/src/App.css
@@ -331,7 +331,7 @@
 }
 
 .move-col-tmNumber {
-  width: 45px;
+  width: 50px;
 }
 
 .move-col-learnMethod {
